test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/goto_label_and_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(ident)
  =
  const int(5)
  ;
  goto
  identifier(ident)
  ;
  return
  const int(0)
  ;
  identifier(ident)
  :
  return
  identifier(ident)
  ;
  }
