test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/goto_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  goto
  identifier(a)
  ;
  return
  const int(0)
  ;
  }
